Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26084

[Regression] Several painting demos assert when using OpenGL on Windows

XMLWordPrintable

    • e454000abc6ddcaff9d42bd8b4365bd89d53ca15

      The affine, deform, gradients and pathstroke demos assert if you click on the "Use OpenGL" button. The failure dialog shows the following text:

      ASSERT: "pd" in file painting/qpainter.cpp, line 1696

      This bug was found while testing the new Qt 5 binary package for Windows. The package was built using msvc2010. The bug does not occur when using a Qt 4.8.2 package built with the same compiler, so this task is marked as a regression.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes